Adicionado uma observação para o Windows